src/example/test/es6/01/index.js
//載入jquery

//
// class Triple {
//     static triple(n) {
//         if (n === undefined) {
//             n = 1;
//         }
//         return n * 3;
//     }
// }
//
// class BiggerTriple extends Triple {
//     static triple(n) {
//         return super.triple(n) * super.triple(n);
//     }
// }

// 3
//console.log(Triple.triple());

// 18
//console.log(Triple.triple(6));

//var tp = new Triple();

// 81
//console.log(BiggerTriple.triple(3));

// 報錯
// TypeError: tp.triple is not a function
// console.log(tp.triple());